force-app/main/default/objects/Line_Item__c/fields/Invoice_Statement__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Statement__c</fullName>
    <label>Invoice Statement</label>
    <referenceTo>Invoice_Statement__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>