force-app/main/default/objects/Line_Item__c/validationRules/Order_in_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_in_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>IF (
    ISNEW(),
    Merchandise__r.Total_Inventory__c &lt; Units_Sold__c,
    IF (
        Units_Sold__c &lt; PRIORVALUE(Units_Sold__c),
        FALSE,
        Merchandise__r.Total_Inventory__c &lt; (Units_Sold__c - PRIORVALUE(Units_Sold__c))
    )
)</errorConditionFormula>
    <errorDisplayField>Units_Sold__c</errorDisplayField>
    <errorMessage>You have ordered more items than we have in stock.</errorMessage>
</ValidationRule>